--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goit-react-hw-07-phonebook",
-  "homepage": "https://pavloholotyuk.github.io/goit-react-hw-07-phonebook",
+  "homepage": "https://github.com/PavloHolotyuk/goit-react-hw-07-phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
